[workspace]
resolver = "2"
members = [
    "crates/ndn-sim",
]
default-members = [
    "crates/ndn-sim",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ndn-rs contributors"]
license = "MIT OR Apache-2.0"

[workspace.metadata.crane]
name = "ndn-rs"

[workspace.dependencies]
# NDN workspace crates — grouped by subdirectory layer
ndn-packet    = { git = "https://github.com/Quarmire/ndn-rs", tag = "v0.1.0-alpha.1", default-features = false }
ndn-transport = { git = "https://github.com/Quarmire/ndn-rs", tag = "v0.1.0-alpha.1" }
ndn-store     = { git = "https://github.com/Quarmire/ndn-rs", tag = "v0.1.0-alpha.1" }
ndn-engine    = { git = "https://github.com/Quarmire/ndn-rs", tag = "v0.1.0-alpha.1" }

# Core async runtime — individual crates enable only the features they need
tokio      = { version = "1", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }

# Zero-copy byte buffers (no default features — crates opt in to bytes/std explicitly)
bytes = { version = "1", default-features = false }

# Embedded support
heapless = "0.8"
nb       = "1"

# Concurrent data structures
dashmap  = "6"
smallvec = { version = "1", features = ["union"] }
arc-swap = "1"

# LRU cache
lru = "0.12"

# Structured logging
tracing = "0.1"
# tokio-console: runtime task inspector (opt-in; requires --cfg tokio_unstable)
console-subscriber = "0.4"

# Async combinators and stream/sink extension traits
futures = "0.3"
async-trait = "0.1"

# Distributed slice for cross-crate static registration. Pure-Rust,
# works on wasm32-unknown-unknown and bare-metal (per linkme README).
# Used by ndn-strategy's StrategyRegistry so external strategy crates
# can plug in without modifying ndn-mgmt.
linkme = "0.3"

# Error handling
anyhow    = "1"
thiserror = "2"
libc = "0.2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# Compact binary (de)serialization for the rabe ABE crypto types behind
# `ndn-abe`'s TLV ciphertext container. Pinned to the 1.x line.
bincode    = "1"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# Cryptography
ring          = "0.17"
ed25519-dalek = "2"
# `rayon` enables `Hasher::update_rayon` for multi-thread hashing of a
# single large buffer. Useful only above ~128 KiB (rayon overhead beats
# update at smaller sizes); ndn-rs uses it for bulk content publication
# in producer apps and gates per-call on input size. Per-packet signing
# never reaches the threshold and is unaffected.
blake3        = { version = "1", features = ["rayon"] }
# NDNCERT 0.3: ECDH (P-256), HKDF-SHA256, and AES-GCM-128.
# Note: p256 and aes-gcm stay on the rustcrypto 0.10/0.13 release wave
# until their 0.11/0.14 lines exit RC. sha2 + hkdf are on the newer wave
# already — this works because the digest 0.11 trait family is wire-
# compatible at runtime even when half the workspace still pulls
# digest 0.10 transitively (the duplication is a few KB of code, not a
# correctness issue, and p256 has no public API that touches digest).
p256          = { version = "0.13", default-features = false, features = ["ecdh"] }
aes-gcm       = { version = "0.10", features = ["alloc", "getrandom"] }
hkdf          = "0.13"
sha2          = "0.11"
# RNG sourcing. `getrandom` 0.2 is what `aes-gcm`, `p256`, and most
# rustcrypto crates pull transitively; pinning the workspace version
# keeps a single resolution and lets us enable the `js` feature for
# wasm32 in one place. The `js` feature is only meaningful on
# wasm32-unknown-unknown — on every other target it's a no-op.
getrandom     = { version = "0.2", default-features = false, features = ["std"] }
# Drop-in `std::time::{SystemTime, Instant}` shim that works on
# wasm32-unknown-unknown (reads `Date.now()` / `performance.now()`).
# Native targets get the real `std::time` re-exported.
web-time      = "1"

# Serial port support
tokio-serial = "5"

# WebSocket support
tokio-tungstenite = { version = "0.26" }

# WebTransport (HTTP/3 + QUIC) — pure-Rust server, built on quinn.  Mirrors
# ndnd's webtransport-go choice in fw/face/http3-listener.go.
wtransport = { version = "0.7" }

# ACME (RFC 8555) — used by ndn-acme to provision real certs for the
# WebSocket-TLS face (issue #3) and the WebTransport listener (issue #14).
instant-acme = { version = "0.7" }
# DNS-01 challenge plumbing — Cloudflare HTTP API is the only impl shipped
# in phase 2; rustls + reqwest are scoped to ndn-acme so the WT face crate
# stays small.
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# X.509 parsing — ndn-acme reads the leaf cert's notAfter to drive renewal
# and the cert-status surface.
x509-parser  = { version = "0.18" }

# WebSocket TLS (server-side)
tokio-rustls      = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rcgen             = { version = "0.13", default-features = false, features = ["pem", "crypto", "ring"] }
rustls-pemfile    = { version = "2" }

# Logging subscriber (binaries only)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Synchronization
parking_lot = "0.12"

# WebAssembly text format (examples)
wat = "1"

# Persistent storage
fjall = "3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Bluetooth LE GATT server (Linux/BlueZ, D-Bus)
bluer = { version = "0.17", default-features = false, features = ["bluetoothd"] }

# Bluetooth LE GATT server (macOS/iOS, CoreBluetooth via objc2)
objc2                = { version = "0.5" }
objc2-core-bluetooth = { version = "0.2" }
objc2-foundation     = { version = "0.2" }

# Bluetooth LE GATT *central* (macOS/Windows; CoreBluetooth / WinRT). Linux
# central uses bluer instead. `uuid` parses the GATT profile UUID strings.
btleplug = { version = "0.11" }
uuid     = { version = "1" }

# Raw packet capture (Windows Npcap / libpcap)
pcap = "2"

# Windows system APIs
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

# ── Build profiles ─────────────────────────────────────────────────────────────

# console: build ndn-fwd with tokio-console task inspector support.
#
# Note: `profile-rustflags` is not yet stable in Cargo; set the required
# --cfg tokio_unstable via the environment instead:
#
#   RUSTFLAGS="--cfg tokio_unstable" cargo build -p ndn-fwd --features console --profile console
#
# The profile inherits dev settings; add debug symbols and disable
# inlining to keep tokio-console task names readable.
[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1

[profile.console]
inherits = "dev"
debug = true
opt-level = 0
